Fix BookLendingService: collector(Collectors.toList()) -> toList()